<resources>
    <string name="app_name">BudgetManager</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="firstname">First name:</string>
    <string name="lastname">Last name:</string>
    <string name="register">Register</string>
    <string name="still_don_t_have_account">Still don\'t have account?</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="username">Username:</string>
    <string name="please_wait">Please wait</string>
    <string name="no_internet">No internet</string>
    <string name="marker_title">Title</string>
    <string name="bill_category">Category</string>
    <string name="bill_amount">Amount</string>
    <string name="graph">Graph</string>
    <string name="map">Map</string>
    <string name="delete">Delete</string>
    <string name="sure">Do you really delete</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="explanation">Explanation</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="catalog">Catalog</string>
    <string name="exit">Exit</string>
    <string name="really">Really exit app?</string>

    <string-array name="colors_names">
        <item>BLUE</item>
        <item>GREEN</item>
        <item>RED</item>
    </string-array>
    <integer-array name="colors_ids">
        <item>240</item>
        <item>120</item>
        <item>0</item>
    </integer-array>
    <string-array name="categories">
        <item>CLOTHES</item>
        <item>HOUSE</item>
        <item>FUN</item>
    </string-array>

    <string-array name="listOfGraphDisplay">
        <item>Choose graph</item>
        <item>This Day</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Year</item>
    </string-array>

    <string-array name="listOfHours">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <string-array name="listOfDays">
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
        <item>SUN</item>
    </string-array>

    <string-array name="listOfMonths">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>SEP</item>
        <item>DEC</item>
    </string-array>

</resources>